--- a/src/html/login.html
+++ b/src/html/login.html
@@ -13,32 +13,57 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="login-section">
-                    <div class="line-one text-right">
-                        <span class="logo"></span>
-                        <a class="cannot-login font-h4">无法登录？</a>
-                        <a class="font-h4" href="">免费注册</a>
-                    </div>
-                    <div class="line-two">
-                        <div class="input-box">
-                            <span class="logo"></span>
-                            <input class="font-h4 user-name" type="text" placeholder="用户名/手机号/邮箱地址">
+                    <img class="login-bg" src="./../asset/login/u5.png" alt="" width="100%">
+                    <div class="content">
+                        <div class="line-one text-right">
+                            <span class="logo">
+                                <img src="./../asset/img/logo.jpg" alt="" width="100%">
+                            </span>
+                            <a class="cannot-login font-14 font-bold">无法登录？</a>
+                            <a class="split-line">|</a>
+                            <a class="font-14 font-bold" href="register.html">免费注册</a>
                         </div>
-                    </div>
-                    <div class="line-three">
-                        <div class="input-box">
-                            <span class="logo"></span>
-                            <input class="font-h4 password" type="password" placeholder="密码">
+                        <div class="line-two">
+                            <div class="input-box">
+                                <span class="logo">
+                                    <img src="./../asset/login/u12.png" alt="" width="100%">
+                                </span>
+                                <input class="font-14 user-name font-bold" type="text" placeholder="用户名/手机号/邮箱地址">
+                            </div>
+                        </div>
+                        <div class="line-three">
+                            <div class="input-box">
+                                <span class="logo">
+                                    <img src="./../asset/login/u17.png" alt="" width="100%">
+                                </span>
+                                <input class="font-14 font-bold password" type="password" placeholder="密码">
+                            </div>
+                        </div>
+                        <div class="line-four">
+                            <a href="" class="forgot-password font-14 font-bold">忘记密码？</a>
+                        </div>
+                        <div class="line-five">
+                            <button class="btn">立即登录</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="foot text-center">
-            <p>Copyright © 2009 Axure.org All rights reserved.</p>
+            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
             <p>成都联助科技</p>
         </div>
     </div>
-
+    <div class="remodal" data-remodal-id="modal">
+        <button data-remodal-action="close" class="remodal-close"></button>
+        <h1>Remodal</h1>
+        <p>
+            Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative
+            configuration and hash tracking.
+        </p>
+        <br>
+        <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
+    </div>
 </body>
 
 </html>
