--- a/src/html/register.html
+++ b/src/html/register.html
@@ -8,7 +8,135 @@
 </head>
 
 <body>
-<div>这是注册页面</div>
+    <div class="document">
+        <div class="register-box">
+            <div class="register-header">
+                <div class="logo">
+                    <img src="./../asset/img/logo.jpg" alt="" width="100%">
+                </div>
+                <p class="font-30" style="line-height: 72px;margin-bottom: 0">欢迎注册</p>
+                <div class="to-index">
+                    <img src="./../asset/register/u688.png" alt="">
+                    <a class="font-bold" href="index.html" class="font-bold">维工坊首页</a>
+                </div>
+            </div>
+            <div class="registerPage-header">
+                <button class="btn font-bold" onclick="changePage('0')">会员</button>
+                <button class="btn font-bold" onclick="changePage('1')">开发者</button>
+                <div class="box">
+                    <span class="font-bold font-16">已有账号？</span>
+                    <a class="font-bold font-16" href="./login.html">请登录</a>
+                </div>
+            </div>
+            <div class="content">
+                <div class="content-header">
+                    <p class="font-bold font-22 text-center">会员注册</p>
+                </div>
+                <div class="content-member">
+                    <ul class="list-unstyled">
+                        <li class="text-center">
+                            <span style="color: red">*</span>
+                            <span style="color:#33d6ff">用户名</span>
+                            <div class="input-box text-left">
+                                <input type="text" placeholder="建议6至20位字母、数据组成">
+                                <br>
+                                <label>label</label>
+                            </div>
+                        </li>
+                        <li class="text-center">
+                            <span style="color: red">*</span>
+                            <span style="color:#33d6ff">手机号</span>
+                            <div class="input-box text-left">
+                                <input type="text" placeholder="建议使用常用手机">
+                                <br>
+                                <label>label</label>
+                            </div>
+                        </li>
+                        <li class="text-center">
+                            <span style="color: red">*</span>
+                            <span style="color:#33d6ff">邮箱地址</span>
+                            <div class="input-box text-left">
+                                <input type="text" placeholder="企业注册填写真实企业的统一社会信用代码">
+                                <br>
+                                <label>label</label>
+                            </div>
+                        </li>
+                        <li class="text-center">
+                            <span style="color: red">*</span>
+                            <span style="color:#33d6ff">设置密码</span>
+                            <div class="input-box text-left">
+                                <input type="text" placeholder="建议6至20位字母、数据组成">
+                                <br>
+                                <label>label</label>
+                            </div>
+                        </li>
+                        <li class="text-center">
+                            <span style="color: red">*</span>
+                            <span style="color:#33d6ff">确认密码</span>
+                            <div class="input-box text-left">
+                                <input type="text" placeholder="请再次输入密码">
+                                <br>
+                                <label>label</label>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content-developer">
+                        <ul class="list-unstyled">
+                            <li class="text-center">
+                                <span style="color: red">*</span>
+                                <span style="color:#33d6ff">用户名</span>
+                                <div class="input-box text-left">
+                                    <input type="text" placeholder="建议6至20位字母、数据组成">
+                                    <br>
+                                    <label>label</label>
+                                </div>
+                            </li>
+                            <li class="text-center">
+                                <span style="color: red">*</span>
+                                <span style="color:#33d6ff">手机号</span>
+                                <div class="input-box text-left">
+                                    <input type="text" placeholder="建议使用常用手机">
+                                    <br>
+                                    <label>label</label>
+                                </div>
+                            </li>
+                            <li class="text-center">
+                                <span style="color: red">*</span>
+                                <span style="color:#33d6ff">邮箱地址</span>
+                                <div class="input-box text-left">
+                                    <input type="text" placeholder="企业注册填写真实企业的统一社会信用代码">
+                                    <br>
+                                    <label>label</label>
+                                </div>
+                            </li>
+                            <li class="text-center">
+                                <span style="color: red">*</span>
+                                <span style="color:#33d6ff">设置密码</span>
+                                <div class="input-box text-left">
+                                    <input type="text" placeholder="建议6至20位字母、数据组成">
+                                    <br>
+                                    <label>label</label>
+                                </div>
+                            </li>
+                            <li class="text-center">
+                                <span style="color: red">*</span>
+                                <span style="color:#33d6ff">确认密码</span>
+                                <div class="input-box text-left">
+                                    <input type="text" placeholder="请再次输入密码">
+                                    <br>
+                                    <label>label</label>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+            </div>
+        </div>
+        <div class="foot text-center">
+            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
+            <p>成都联助科技</p>
+        </div>
+    </div>
 </body>
 
 </html>
