--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,81 @@
 </head>
 
 <body>
-    <div>这是首页</div>
+    <div class="document">
+        <div class="header">
+            <img class="logo" src="./../asset/img/logo.jpg" alt="">
+            <div class="search-box">
+                <div class="input-box">
+                    <input type="text" placeholder="输入名称关键字搜索......">
+                    <div class="search-btn text-center">
+                        <img src="./../asset/index/findbutton.png" alt="">
+                        <span class="font-14">搜 索</span>
+                    </div>
+                </div>
+                <div class="keyWord-box">
+                    <span>热门搜索：</span>
+                    <ul class="list-unstyled list-inline">
+                        <li>
+                            <span class="font-12">VR小学教育</span>
+                        </li>
+                        <li>
+                            <span class="font-12">VR看房</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="member-box">
+                <div class="line-one">
+                    <span class="user-name">张三</span>
+                    <span>,您好！欢迎来维工坊VR虚拟世界</span>
+                </div>
+                <div class="line-two">
+                    <a>开发者中心</a>
+                    <a class="split-line">|
+                        </>
+                        <a href="./login.html">会员登录</a>
+                        <a class="split-line">|</a>
+                        <a href="./register.html">免费注册</a>
+                </div>
+            </div>
+        </div>
+        <div class="nav">
+            <ul class="list-inline list-unstyled">
+                <li>
+                    <img src="" alt="">
+                    <span>首页</span>
+                </li>
+                <li>
+                    <span>VR教育</span>
+                </li>
+                <li>
+                    <span>VR家装</span>
+                </li>
+                <li>
+                    <span>VR工业</span>
+                </li>
+                <li>
+                    <span>VR医疗</span>
+                </li>
+                <li>
+                    <span>VR交通</span>
+                </li>
+                <li>
+                    <span>VR军事</span>
+                </li>
+                <li>
+                    <span>VR展馆</span>
+                </li>
+                <li>
+                    <span>VR安防</span>
+                </li>
+                <li>
+                    <span>其他</span>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 
 </html>
