--- a/src/html/login.html
+++ b/src/html/login.html
@@ -40,10 +40,10 @@
                             </div>
                         </div>
                         <div class="line-four">
-                            <a href="" class="forgot-password font-14 font-bold">忘记密码？</a>
+                            <a class="forgot-password font-14 font-bold">忘记密码？</a>
                         </div>
                         <div class="line-five">
-                            <button class="btn">立即登录</button>
+                            <button class="btn btn-login" disabled>立即登录</button>
                         </div>
                     </div>
                 </div>
@@ -54,15 +54,23 @@
             <p>成都联助科技</p>
         </div>
     </div>
-    <div class="remodal" data-remodal-id="modal">
-        <button data-remodal-action="close" class="remodal-close"></button>
-        <h1>Remodal</h1>
+    <div class="remodal" data-remodal-id="fogotPasswordModal">
+            <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
+            <h3>忘记密码</h3>
+            <p>
+                暂时还没有写登录接口
+            </p>
+            <br>
+            <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
+        </div>
+    <div class="remodal" data-remodal-id="loginModal">
+        <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
+        <h3 class="modal-title">登录</h3>
         <p>
-            Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin with declarative
-            configuration and hash tracking.
+            暂时还没有写登录接口
         </p>
         <br>
-        <button data-remodal-action="confirm" class="remodal-confirm">OK</button>
+        <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
     </div>
 </body>
 
