--- a/src/html/login.html
+++ b/src/html/login.html
@@ -17,7 +17,7 @@
                     <div class="content">
                         <div class="line-one text-right">
                             <span class="logo">
-                                <img src="./../asset/img/logo.jpg" alt="" width="100%">
+                                <img src="./../asset/img/logo.png" alt="" width="100%">
                             </span>
                             <a class="cannot-login font-14 font-bold">无法登录？</a>
                             <a class="split-line">|</a>
@@ -65,8 +65,7 @@
         </div>
     <div class="remodal" data-remodal-id="loginModal">
         <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
-        <h3 class="modal-title">登录</h3>
-        <p>
+        <p class="login-result">
             暂时还没有写登录接口
         </p>
         <br>
