--- a/src/html/register.html
+++ b/src/html/register.html
@@ -12,7 +12,7 @@
         <div class="register-box">
             <div class="register-header">
                 <div class="logo">
-                    <img src="./../asset/img/logo.jpg" alt="" width="100%">
+                    <img src="./../asset/img/logo.png" alt="" width="100%">
                 </div>
                 <p class="font-30">欢迎注册</p>
                 <div class="to-index">
@@ -205,6 +205,15 @@
             <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
             <p>成都联助科技</p>
         </div>
+    </div>
+    <div class="remodal" data-remodal-id="registerModal">
+        <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
+        <h3 class="modal-title">注册</h3>
+        <p>
+            暂时还没有写注册接口
+        </p>
+        <br>
+        <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
     </div>
 </body>
 
