--- a/src/html/index.html
+++ b/src/html/index.html
@@ -97,41 +97,16 @@
                     <img src="./../asset/index/u122.png" alt="">
                     <span>浏览热度排行榜</span>
                 </div>
-                <div class="col-md-3">
-                    <div class="vr-box">
-                        <img src="./../asset/index/phb1-img_u110.png" alt="" width="100%">
-                        <p class="name">VR游戏3A大制</p>
-                        <p class="id-box">
-                            <span>ID:</span>
-                            <span>1003</span>
-                        </p>
-                        <p class="hot-num">
-                            <img src="./../asset/index/u115.png" alt="">
-                            <span>99</span>
-                        </p>
-                    </div>
-                </div>
             </div>
             <div class="row download-ranking ranking">
                 <div class="title-box">
                     <img src="./../asset/index/u128.png" alt="">
                     <span>下载热度排行榜</span>
                 </div>
-                <div class="col-md-3">
-                    <div class="vr-box">
-                        <img src="./../asset/index/phb1-img_u110.png" alt="" width="100%">
-                        <p class="name">VR游戏3A大制</p>
-                        <p class="id-box">
-                            <span>ID:</span>
-                            <span>1003</span>
-                        </p>
-                        <p class="hot-num">
-                            <img src="./../asset/index/u137.png" alt="">
-                            <span>99</span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+        </div>
+        <div class="foot text-center">
+            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
+            <p>成都联助科技</p>
         </div>
 
 </body>
