--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -6,8 +6,67 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>test avalon</title>
 
-<body>
-    <div>这是产品列表</div>
-</body>
+    <body>
+        <div class="document">
+            <div class="content">
+                <p class="title">钓鱼VR游戏</p>
+                <div class="detail">
+                    <div class="video-box">
+                        <video id="video" width="100%" height="100%" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
+                            webkit-playsinline="true" style="width: 100%; height: 100%; background-color: rgb(0, 0, 0);">
+                            <source src="">
+                        </video>
+                        <div class="video-number">
+                            <ul class="list-unstyled list-inline">
+                                <li>
+                                    <img src="./../asset/vrproduct/u439.png" alt="">
+                                    <span>2189</span>
+                                    <span>人点赞</span>
+                                </li>
+                                <li>
+                                    <img src="./../asset/vrproduct/u437.png" alt="">
+                                    <span>3000</span>
+                                    <span>人收藏</span>
+                                </li>
+                                <li>
+                                    <img src="./../asset/vrproduct/u449.png" alt="">
+                                    <span>DEMO下载</span>
+                                    <span></span>
+                                    <span>次</span>
+                                </li>
+                                <li>
+                                    <span>发布时间：</span>
+                                    <span>2018年3月1日</span>
+                                </li>
+                                <li>
+                                    <span>DEMO大小：</span>
+                                    <span>150MB</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="video-detail">
+                        <button class="btn download-btn">
+                            <img src="./../asset/vrproduct/u455.png" alt="">
+                            <span>DEMO下载</span>
+                        </button>
+                        <div class="contact-way">
+                            <p class="text-center">如需购买请直接联系开发者进行交易！</p>
+                            <p><img src="./../asset/vrproduct/u427.png" alt=""><span>开发者：</span><span>张三</span></p>
+                            <p><img src="./../asset/vrproduct/u429.png" alt=""><span>QQ号：</span><span>595988552</span></p>
+                            <p><img src="./../asset/vrproduct/u457.png" alt=""><span>微信号：</span><span>13402882306</span></p>
+                        </div>
+                        <div class="video-text">
+                            <p>一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="foot text-center">
+                <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
+                <p>成都联助科技</p>
+            </div>
+        </div>
+    </body>
 
 </html>
