--- a/src/html/classifylist.html
+++ b/src/html/classifylist.html
@@ -6,8 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>test avalon</title>
 </head>
+
 <body>
-    <div>这是总列表页</div>
+    <div class="document">
+        <div class="header">
+            <p>
+                <span>VR类型：</span>
+                <span class="vr-type">VR教育</span>
+            </p>
+            <p class="list-type">
+                <span class="active" value="0">总和排序</span>
+                <span value="1">最近更新</span>
+                <span value="2">人气最高</span>
+                <span value="3">下载量最高</span>
+            </p>
+        </div>
+        <div class="content">
+            <div class="row vr-list">
+            </div>
+            <div class="page-list">
+            </div>
+        </div>
+        <div class="foot text-center">
+            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
+            <p>成都联助科技</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
