--- a/src/html/login.html
+++ b/src/html/login.html
@@ -41,6 +41,7 @@
                         </div>
                         <div class="line-four">
                             <a class="forgot-password font-14 font-bold">忘记密码？</a>
+                            <p class="login-msg text-center"></p>
                         </div>
                         <div class="line-five">
                             <button class="btn btn-login" disabled>立即登录</button>
