--- a/src/html/rankingList.html
+++ b/src/html/rankingList.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>test avalon</title>
-</head>
-
-<body>
-<div>这是排行榜页</div>
-</body>
-
-</html>
+<div class="container-fluid content">
+    <div class="row hot-ranking ranking">
+        <div class="title-box">
+            <img src="./../asset/index/u122.png" alt="">
+            <span>浏览热度排行榜</span>
+        </div>
+    </div>
+    <div class="row download-ranking ranking">
+        <div class="title-box">
+            <img src="./../asset/index/u128.png" alt="">
+            <span>下载热度排行榜</span>
+        </div>
+    </div>
+</div>
