--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,10 +37,10 @@
                     <span>,您好！欢迎来维工坊VR虚拟世界</span>
                 </div>
                 <div class="line-two">
-                    <a>开发者中心</a>
+                    <a class="developer">开发者中心</a>
                     <a class="split-line">|</a>
-                    <a href="./login.html">会员登录</a>
-                    <a class="split-line">|</a>
+                    <a class="login" href="./login.html">会员登录</a>
+                    <a class="split-line login">|</a>
                     <a href="./register.html">免费注册</a>
                 </div>
             </div>
@@ -53,17 +53,11 @@
                 </li>
                 <li class="education">
                     <span>VR教育</span>
-                    <ul class="list-unstyled education-box">
-                        <li>
-                            <p>建筑教育</p>
-                        </li>
-                        <li>
-                            <p>科普知识教育</p>
-                        </li>
-                        <li>
-                            <p>K12教育</p>
-                        </li>
-                    </ul>
+                    <div class="list-unstyled education-box">
+                        <p>建筑教育</p>
+                        <p>科普知识教育</p>
+                        <p>K12教育</p>
+                    </div>
                 </li>
                 <li>
                     <span>VR家装</span>
@@ -91,26 +85,20 @@
                 </li>
             </ul>
         </div>
+        <iframe src="/rankingList.html" frameborder="0"></iframe>
         <div class="container-fluid content">
-            <div class="row hot-ranking ranking">
-                <div class="title-box">
-                    <img src="./../asset/index/u122.png" alt="">
-                    <span>浏览热度排行榜</span>
-                </div>
-            </div>
-            <div class="row download-ranking ranking">
-                <div class="title-box">
-                    <img src="./../asset/index/u128.png" alt="">
-                    <span>下载热度排行榜</span>
-                </div>
-            </div>
             <div class="foot text-center">
                 <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
                 <p>成都联助科技</p>
             </div>
         </div>
     </div>
-
+    <div class="remodal" data-remodal-id="indexModal">
+        <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
+        <p class="modal-text"></p>
+        <br>
+        <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
+    </div>
 </body>
 
 </html>
