--- a/src/html/classifylist.html
+++ b/src/html/classifylist.html
@@ -24,10 +24,36 @@
         <div class="content">
             <div class="row vr-list">
             </div>
-            <div class="page-list">
-            
-            </div>
         </div>
+        <nav class="text-center" aria-label="Page navigation">
+            <ul class="pagination">
+                <div class="page-total">
+                    <a>
+                        <span>1/10页</span>
+                        <span>199条</span>
+                    </a>
+                </div>
+                <li>
+                    <a class="first-page">首页</a>
+                </li>
+                <li>
+                    <a class="prev" aria-label="Previous">
+                        <span aria-hidden="true">上一页</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="active">1</a>
+                </li>
+                <li class="next-btn">
+                    <a class="next">
+                        <span>下一页</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="last-page">尾页</a>
+                </li>
+            </ul>
+        </nav>
     </div>
 
 </body>
