--- a/src/html/index.html
+++ b/src/html/index.html
@@ -49,43 +49,43 @@
             <ul class="list-inline list-unstyled">
                 <li>
                     <img src="./../asset/index/u63.png" alt="">
-                    <span>首页</span>
+                    <span value="0">首页</span>
                 </li>
                 <li class="education">
-                    <span>VR教育</span>
+                    <span value="1">VR教育</span>
                     <div class="list-unstyled education-box">
-                        <p>建筑教育</p>
-                        <p>科普知识教育</p>
-                        <p>K12教育</p>
+                        <p value="1.1">建筑教育</p>
+                        <p value="1.2">科普知识教育</p>
+                        <p value="1.3">K12教育</p>
                     </div>
                 </li>
                 <li>
-                    <span>VR家装</span>
+                    <span value="2">VR家装</span>
                 </li>
                 <li>
-                    <span>VR工业</span>
+                    <span value="3">VR工业</span>
                 </li>
                 <li>
-                    <span>VR医疗</span>
+                    <span value="4">VR医疗</span>
                 </li>
                 <li>
-                    <span>VR交通</span>
+                    <span value="5">VR交通</span>
                 </li>
                 <li>
-                    <span>VR军事</span>
+                    <span value="6">VR军事</span>
                 </li>
                 <li>
-                    <span>VR展馆</span>
+                    <span value="7">VR展馆</span>
                 </li>
                 <li>
-                    <span>VR安防</span>
+                    <span value="8">VR安防</span>
                 </li>
                 <li>
-                    <span>其他</span>
+                    <span value="9">其他</span>
                 </li>
             </ul>
         </div>
-        <iframe src="/rankingList.html" frameborder="0"></iframe>
+        <iframe src="/classifylist.html" frameborder="0"></iframe>
         <div class="container-fluid content">
             <div class="foot text-center">
                 <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
