--- a/src/html/index.html
+++ b/src/html/index.html
@@ -46,46 +46,14 @@
             </div>
         </div>
         <div class="nav">
-            <ul class="list-inline list-unstyled">
-                <li>
+            <ul class="list-inline list-unstyled nav-list">
+                <li class="index-page">
                     <img src="./../asset/index/u63.png" alt="">
                     <span value="0">首页</span>
                 </li>
-                <li class="education">
-                    <span value="1">VR教育</span>
-                    <div class="list-unstyled education-box">
-                        <p value="1.1">建筑教育</p>
-                        <p value="1.2">科普知识教育</p>
-                        <p value="1.3">K12教育</p>
-                    </div>
-                </li>
-                <li>
-                    <span value="2">VR家装</span>
-                </li>
-                <li>
-                    <span value="3">VR工业</span>
-                </li>
-                <li>
-                    <span value="4">VR医疗</span>
-                </li>
-                <li>
-                    <span value="5">VR交通</span>
-                </li>
-                <li>
-                    <span value="6">VR军事</span>
-                </li>
-                <li>
-                    <span value="7">VR展馆</span>
-                </li>
-                <li>
-                    <span value="8">VR安防</span>
-                </li>
-                <li>
-                    <span value="9">其他</span>
-                </li>
             </ul>
         </div>
-        <iframe src="/classifylist.html" frameborder="0"></iframe>
+        <iframe src="/rankingList.html" frameborder="0"></iframe>
         <div class="container-fluid content">
             <div class="foot text-center">
                 <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
@@ -93,8 +61,31 @@
             </div>
         </div>
     </div>
+    <div class="nav-contact">
+        <ul>
+            <li class="first-li">
+                <img src="./../asset/index/u76.png" alt="">
+                <p>在线客服</p>
+                <div class="online-box">
+                    <p>QQ  ：265833733</p>
+                    <p>微信：lostyoulostall</p>
+                </div>
+            </li>
+            <li>
+                <img src="./../asset/index/u78.png" alt="">
+                <p>客服电话</p>
+            </li>
+            <li>
+                <img src="./../asset/index/u80.png" alt="">
+                <p>会员中心</p>
+            </li>
+            <li>
+                <img src="./../asset/index/u82.png" alt="">
+                <p>回到顶部</p>
+            </li>
+        </ul>
+    </div>
     <div class="remodal" data-remodal-id="indexModal">
-        <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
         <p class="modal-text"></p>
         <br>
         <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
