--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>test avalon</title>
+    <title>VR</title>
 </head>
 
 <body>
@@ -62,24 +62,28 @@
         </div>
     </div>
     <div class="nav-contact">
+        <div class="online-box-detail detail1">
+            <p>QQ ：265833733</p>
+            <p>微信：lostyoulostall</p>
+        </div>
+        <div class="online-box-detail detail2">
+            <p>手机：13402882309</p>
+            <p>座机：028-87639021</p>
+        </div>
         <ul>
             <li class="first-li">
                 <img src="./../asset/index/u76.png" alt="">
                 <p>在线客服</p>
-                <div class="online-box">
-                    <p>QQ  ：265833733</p>
-                    <p>微信：lostyoulostall</p>
-                </div>
             </li>
-            <li>
+            <li class="second-li">
                 <img src="./../asset/index/u78.png" alt="">
                 <p>客服电话</p>
             </li>
-            <li>
+            <li class="third-li">
                 <img src="./../asset/index/u80.png" alt="">
                 <p>会员中心</p>
             </li>
-            <li>
+            <li class="top-btn">
                 <img src="./../asset/index/u82.png" alt="">
                 <p>回到顶部</p>
             </li>
