--- a/src/html/register.html
+++ b/src/html/register.html
@@ -114,9 +114,9 @@
                             <span style="color: red">*</span>
                             <span class="label">开发者类型</span>
                             <div class="radio-box text-left">
-                                <input class="personal" id="personal" type="radio" name="type" value="1" checked>
+                                <input class="personal" id="personal" type="radio" name="type" value="02" checked>
                                 <label class="personal" for="personal">个人</label>
-                                <input class="group" id="group" type="radio" name="type" value="2">
+                                <input class="group" id="group" type="radio" name="type" value="03">
                                 <label class="group" for="group">企业</label>
                             </div>
                         </li>
@@ -208,9 +208,9 @@
     </div>
     <div class="remodal" data-remodal-id="registerModal">
         <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
-        <h3 class="modal-title">注册</h3>
+        <h3 class="modal-title"></h3>
         <p>
-            暂时还没有写注册接口
+            注册失败，请确认填写参数是否正确！
         </p>
         <br>
         <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
