--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,14 +21,7 @@
                 </div>
                 <div class="keyWord-box">
                     <span>热门搜索：</span>
-                    <ul class="list-unstyled list-inline keywords">
-                        <li>
-                            <span class="font-12">VR小学教育</span>
-                        </li>
-                        <li>
-                            <span class="font-12">VR看房</span>
-                        </li>
-                    </ul>
+                    <ul class="list-unstyled list-inline keywords"></ul>
                 </div>
             </div>
             <div class="member-box">
