--- a/src/html/login.html
+++ b/src/html/login.html
@@ -11,14 +11,10 @@
 <body>
     <div class="document">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row login">
                 <div class="login-section">
-                    <img class="login-bg" src="./../asset/login/u5.png" alt="" width="100%">
                     <div class="content">
                         <div class="line-one text-right">
-                            <span class="logo">
-                                <img src="./../asset/img/logo.png" alt="" width="100%">
-                            </span>
                             <a class="cannot-login font-14 font-bold">无法登录？</a>
                             <a class="split-line">|</a>
                             <a class="font-14 font-bold" href="register.html">免费注册</a>
