--- a/src/html/classifylist.html
+++ b/src/html/classifylist.html
@@ -24,7 +24,9 @@
             </p>
         </div>
         <div class="content">
-            <div class="row vr-list"></div>
+            <div class="row vr-list">
+            </div>
+            <p class="noData text-center">抱歉，没有查询到数据...</p>
         </div>
         <div class="page-box">
             <div class="page-detail">
