--- a/src/html/rankingList.html
+++ b/src/html/rankingList.html
@@ -1,14 +1,14 @@
 <div class="container-fluid content">
-    <div class="row hot-ranking ranking">
+    <div class="row ranking-1 ranking">
         <div class="title-box">
             <img src="./../asset/rankingList/u122.png" alt="">
-            <span>浏览热度排行榜</span>
+            <span class="title-1"></span>
         </div>
     </div>
-    <div class="row download-ranking ranking">
+    <div class="row ranking-2 ranking">
         <div class="title-box">
             <img src="./../asset/rankingList/u128.png" alt="">
-            <span>下载热度排行榜</span>
+            <span class="title-2"></span>
         </div>
     </div>
 </div>
