--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -12,7 +12,7 @@
                 <p class="title">钓鱼VR游戏</p>
                 <div class="detail">
                     <div class="video-box">
-                        <video id="video" width="100%" height="100%" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
+                        <video id="video" width="100%" height="100%" poster="" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
                             webkit-playsinline="true" style="width: 100%; height: 100%; background-color: rgb(0, 0, 0);">
                             <source src="">
                         </video>
@@ -20,27 +20,28 @@
                             <ul class="list-unstyled list-inline">
                                 <li>
                                     <img src="./../asset/vrproduct/u439.png" alt="">
-                                    <span>2189</span>
+                                    <span class="praise"></span>
                                     <span>人点赞</span>
                                 </li>
                                 <li>
                                     <img src="./../asset/vrproduct/u437.png" alt="">
-                                    <span>3000</span>
+                                    <span class="collection"></span>
                                     <span>人收藏</span>
                                 </li>
                                 <li>
                                     <img src="./../asset/vrproduct/u449.png" alt="">
                                     <span>DEMO下载</span>
-                                    <span></span>
+                                    <span class="downamount"></span>
                                     <span>次</span>
                                 </li>
                                 <li>
                                     <span>发布时间：</span>
-                                    <span>2018年3月1日</span>
+                                    <span class="publishtime"></span>
                                 </li>
                                 <li>
                                     <span>DEMO大小：</span>
-                                    <span>150MB</span>
+                                    <span class="softsize"></span>
+                                    <span>MB</span>
                                 </li>
                             </ul>
                         </div>
@@ -52,12 +53,24 @@
                         </button>
                         <div class="contact-way">
                             <p class="text-center">如需购买请直接联系开发者进行交易！</p>
-                            <p><img src="./../asset/vrproduct/u427.png" alt=""><span>开发者：</span><span>张三</span></p>
-                            <p><img src="./../asset/vrproduct/u429.png" alt=""><span>QQ号：</span><span>595988552</span></p>
-                            <p><img src="./../asset/vrproduct/u457.png" alt=""><span>微信号：</span><span>13402882306</span></p>
+                            <p>
+                                <img src="./../asset/vrproduct/u427.png" alt="">
+                                <span>开发者：</span>
+                                <span class="name"></span>
+                            </p>
+                            <p>
+                                <img src="./../asset/vrproduct/u429.png" alt="">
+                                <span>QQ号：</span>
+                                <span class="qq"></span>
+                            </p>
+                            <p>
+                                <img src="./../asset/vrproduct/u457.png" alt="">
+                                <span>微信号：</span>
+                                <span class="wechat"></span>
+                            </p>
                         </div>
                         <div class="video-text">
-                            <p>一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。</p>
+                            <p class="proIntro">一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。一款终极冰上钓鱼VR游戏，让玩家体验冬季垂钓的乐趣。</p>
                         </div>
                     </div>
                 </div>
