--- a/src/html/devIndex.html
+++ b/src/html/devIndex.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VR</title>
+    <title>开发者中心</title>
 </head>
 
 <body>
@@ -37,12 +37,16 @@
                     <a class="split-line">|</a>
                     <a class="publish-product">
                         <img src="./../asset/devIndex/u472.png" alt="">
-                        <span>VR产品发布</span>
+                        <span>
+                            <a href="./vrpublish.html">VR产品发布</a>
+                        </span>
                     </a>
                     <a class="split-line">|</a>
                     <a class="publish-model">
                         <img src="./../asset/devIndex/u472.png" alt="">
-                        <span>VR模型发布</span>
+                        <span>
+                            <a href="./vrModelpublish.html">VR模型发布</a>
+                        </span>
                     </a>
                     <a class="split-line">|</a>
                     <a class="recharge">
