--- a/src/html/register.html
+++ b/src/html/register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>test avalon</title>
+    <title>注册</title>
 </head>
 
 <body>
